[UPDATE] Fix ebooks titles and covers, Remove tags and some texts on BookDetails and add social media icons to footer

--- a/frontend/src/styles/pages/footer.css
+++ b/frontend/src/styles/pages/footer.css
@@ -41,6 +41,7 @@
   display: flex;
   gap: 18px;
   margin-top: 15px;
+  margin-left: 50px;
 }
 
 .social-icon {
@@ -278,6 +279,7 @@
   .social-icons {
     justify-content: center;
     width: 100%;
+    margin-right: 50px;
   }
   
   .footer-bottom {
